--- a/contrib/gitian-descriptors/gitian-osx2.yml
+++ b/contrib/gitian-descriptors/gitian-osx2.yml
@@ -143,7 +143,8 @@ script: |
     #make -j $(nproc) HOST=${i}
 
     #./configure --prefix=$(pwd)/depends/${HOSTS} --enable-cxx --enable-static --disable-shared --disable-debug --disable-tests --enable-upnp-default ${CONFIGFLAGS}
-    CONFIG_SITE=${BASEPREFIX}/${i}/share/config.site ./configure --prefix=$(pwd)/depends/${HOSTS} --disable-ccache --disable-maintainer-mode --disable-dependency-tracking ${CONFIGFLAGS}
+    #CONFIG_SITE=${BASEPREFIX}/${i}/share/config.site ./configure --prefix=$(pwd)/depends/${HOSTS} --disable-ccache --disable-maintainer-mode --disable-dependency-tracking ${CONFIGFLAGS}
+    ./configure --prefix=$(pwd)/depends/${HOSTS} --disable-ccache --disable-maintainer-mode --disable-dependency-tracking ${CONFIGFLAGS}
     #make ${MAKEOPTS}
     make HOST=${i}
 
